pixel-patch/src/styles/Search.css
.search-container {
    max-width: 600px;
    margin: 10vh auto;
    text-align: center;
  }
  
  .search-form {
    display: flex;
    justify-content: center;
    align-items: center;
    margin-bottom: 2rem;
  }
  
  .search-form input {
    padding: 12px 20px;
    font-size: 1.1rem;
    border-radius: 2px;
    background-color: black;
    color: #fff;
    font-family: "JetBrains Mono", monospace;
    text-transform: uppercase;
    box-shadow: 0 0 0 3px #000000 inset;
    height: 60px;
    line-height: 100%;
    width: 90%; /* Keep this if you want it to be the same width as the previous styling */
    border: 1px solid #ccc;
    outline: none;
  }
  
  /* Hover effect for the input */
  .search-form input:hover {
    color: black;
    background-color: #fff;
  }


  .search-form button {
    padding: 12px 20px;
    font-size: 1.1rem;
    border-radius: 2px;
    background-color: black;
    color: #fff;
    font-family: "JetBrains Mono",monospace;
    text-transform: uppercase;
    box-shadow: 0 0 0 3px #000000 inset;
    height: 60px;
    line-height: 100%; 
  }
  
  .search-form button:hover {
    color: black;
    background-color: #fff;
  }
  
  .search-results {
    display: flex;
    flex-direction: column;
    align-items: center;
  }
  
  .search-item {
    width: 100%;
    border: 1px solid #ddd;
    border-radius: 5px;
    margin-bottom: 10px;
    padding: 10px;
    text-align: left;
    cursor: pointer;
    transition: background-color 0.3s ease;
  }
  
  .search-item:hover {
    background-color: #f1f1f1;
  }
  
  .search-item h3 {
    margin: 0 0 10px;
  }
  
  .search-item .drawing {
    margin-top: 10px;
  }
  


    /* 
  .create-post-btn {
    padding: 12px 20px;
    font-size: 1.1rem;
    border-radius: 2px;
    background-color: black;
    color: #fff;
    font-family: "JetBrains Mono",monospace;
    text-transform: uppercase;
    box-shadow: 0 0 0 3px #000000 inset;
    height: 42px;
    line-height: 100%; 
    margin-bottom: 1rem; 
  }
  
  .create-post-btn:hover {
    color: black;
    background-color: #fff;
  }
 */

